[gd_scene load_steps=3 format=3 uid="uid://b2k1brhqhckeu"]

[ext_resource type="Script" uid="uid://quc4ihk14t0u" path="res://Managers/speed.gd" id="1_miwy5"]
[ext_resource type="Texture2D" uid="uid://ouam6ijtsl5h" path="res://night/sprites/pvv_tiles2.png" id="2_2ipni"]

[node name="Speed" type="Node2D"]
script = ExtResource("1_miwy5")

[node name="speedx1" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="Label" type="Label" parent="speedx1"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "x1"
horizontal_alignment = 1

[node name="Button_speed1" type="Button" parent="speedx1"]
modulate = Color(1, 1, 1, 0)
offset_left = 3.0
offset_right = 35.0
offset_bottom = 25.0
focus_mode = 0
toggle_mode = true
metadata/_edit_use_anchors_ = true

[node name="speedtile" type="Sprite2D" parent="speedx1"]
modulate = Color(0.443137, 0.8, 0.443137, 1)
z_index = -1
position = Vector2(22.2, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedx2" type="Node2D" parent="."]
position = Vector2(46, 0)

[node name="Label" type="Label" parent="speedx2"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "x2"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button_speed2" type="Button" parent="speedx2"]
modulate = Color(1, 1, 1, 0)
offset_left = 3.0
offset_right = 35.0
offset_bottom = 25.0
focus_mode = 0
toggle_mode = true
metadata/_edit_use_anchors_ = true

[node name="speedtile" type="Sprite2D" parent="speedx2"]
modulate = Color(0.960784, 0.921569, 0.435294, 1)
z_index = -2
position = Vector2(18.2, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedtile2" type="Sprite2D" parent="speedx2"]
modulate = Color(0.960784, 0.921569, 0.435294, 1)
z_index = -1
position = Vector2(26.2, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedx3" type="Node2D" parent="."]
position = Vector2(94, 0)

[node name="Label" type="Label" parent="speedx3"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "x3"
horizontal_alignment = 1

[node name="Button_speed3" type="Button" parent="speedx3"]
modulate = Color(1, 1, 1, 0)
offset_left = 3.0
offset_right = 35.0
offset_bottom = 25.0
focus_mode = 0
toggle_mode = true
metadata/_edit_use_anchors_ = true

[node name="speedtile1" type="Sprite2D" parent="speedx3"]
modulate = Color(0.992157, 0.623529, 0.333333, 1)
z_index = -3
position = Vector2(16.2, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedtile2" type="Sprite2D" parent="speedx3"]
modulate = Color(0.992157, 0.623529, 0.333333, 1)
z_index = -2
position = Vector2(22.7, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedtile3" type="Sprite2D" parent="speedx3"]
modulate = Color(0.992157, 0.623529, 0.333333, 1)
z_index = -1
position = Vector2(29.2, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedx4" type="Node2D" parent="."]
position = Vector2(145, 0)

[node name="Label" type="Label" parent="speedx4"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "x4"
horizontal_alignment = 1

[node name="Button_speed4" type="Button" parent="speedx4"]
modulate = Color(1, 1, 1, 0)
offset_left = 3.0
offset_right = 44.0
offset_bottom = 25.0
focus_mode = 0
metadata/_edit_use_anchors_ = true

[node name="speedtile1" type="Sprite2D" parent="speedx4"]
modulate = Color(0.992157, 0.407843, 0.403922, 1)
z_index = -3
position = Vector2(14.2, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedtile2" type="Sprite2D" parent="speedx4"]
modulate = Color(0.992157, 0.407843, 0.403922, 1)
z_index = -2
position = Vector2(20.7, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedtile3" type="Sprite2D" parent="speedx4"]
modulate = Color(0.992157, 0.407843, 0.403922, 1)
z_index = -1
position = Vector2(27.2, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14

[node name="speedtile4" type="Sprite2D" parent="speedx4"]
modulate = Color(0.992157, 0.407843, 0.403922, 1)
z_index = -1
position = Vector2(34.2, 13.3)
scale = Vector2(0.757812, 0.75)
texture = ExtResource("2_2ipni")
hframes = 4
vframes = 4
frame = 14
